Added component for branch form by using this we can add branch

--- a/src/app/routes/branch/list/list.component.html
+++ b/src/app/routes/branch/list/list.component.html
@@ -27,7 +27,7 @@
 </ng-template>
 
 <ng-template #toolbarTpl>
-  <button mat-raised-button color="primary" type="submit">Add</button>
+  <button mat-raised-button color="primary" type="submit" (click)="navigateToCreate()">Add</button>
   <button mat-raised-button color="accent" class="m-l-8" type="submit" (click)="previous()">
     Back
   </button>
